@@ -1,4 +1,6 @@
 
+Dec 10, 2008: libarchive 2.5.904a released
+
 Dec 04, 2008: libarchive 2.5.903a released
 Nov 09, 2008: libarchive 2.5.902a released
 Nov 08, 2008: libarchive 2.5.901a released
